Fixed icons on mobile phones.

--- a/style.css
+++ b/style.css
@@ -345,4 +345,9 @@ footer {
         width: 90%;
         padding: 0 5%;
     }
+
+    .contacto .contacto-botones {
+        width: 100%;
+        flex-direction: row;
+    }
 }
